Fix: Randomize RouteSets being called despite individual options being off (though not if main setting was off).
thanks caplag for a related report.

Fix: "Custom soldier type in Free/Mission" resetting to off after game is next restarted - thanks Spectral for the report and troubleshooting files.

Fix: Some cases of Player Cam hook (FOV) not applying.

r260 - 2023-03-10
Fix: quest adding their missionPacks in helispace - thanks CapLag for an unrelated report that made me test something related.

Fix: Repop of sideop 144 tent_q99040 "Secure the Remains of the Man on Fire" arival on quarantine platform leaving player stuck in helipad.

Fix: Infinite load screen when IH startOnFoot used when force go to mb on quest clear > demo play. Another case of the prior fix in r259 for start on foot, which Repop of sideop 144 is also a case of. 

Fix: Several bugs setting quest flags incorrectly. Could result in some of the hidden/managed quests activating or not. 
Could also cause the all sideops disabled bug.
A manual fix is to run "Reroll sideops selection" with "Repop mode" set to Allways.

Ancillary ih saves (addon mission and quest states) are now cleared on new game.

InfQuest / IH Sideops menu:
[youtube]2UUXDfMfrso[/youtube]
https://youtu.be/2UUXDfMfrso

Renamed unlockSideOpNumber to quest_forceQuestNumber, just an internal name change to be more consistant and accurate. Though you will have to set the setting again.

Renamed ihSideopsPercentageCount to quest_addonsCountForCompletion, just an internal name change to be more consistant and accurate. Though you will have to set the setting again.

quest_updateRepopMode="Repop mode": "On none left"|"Allways"
Lets you choose the behaviour of how repeatable sideops are refreshed. 
The update is run for the sideop area of a quest you just finished, 
or for all areas when changing many of the IH sideops options or rerolling sideops. 